<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (c) 2010-2026 Contributors to the openHAB project

    See the NOTICE file(s) distributed with this work for additional
    information.

    This program and the accompanying materials are made available under the
    terms of the Eclipse Public License 2.0 which is available at
    http://www.eclipse.org/legal/epl-2.0

    SPDX-License-Identifier: EPL-2.0
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.openhab.addons</groupId>
    <artifactId>org.openhab.eightsleep.reactor</artifactId>
    <version>5.0.0-SNAPSHOT</version>
  </parent>

  <artifactId>org.openhab.binding.eightsleep</artifactId>
  <packaging>jar</packaging>

  <name>openHAB Add-ons :: Bundles :: Eight Sleep Binding</name>
  <description>Eight Sleep smart mattress binding for openHAB</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.release>21</maven.compiler.release>
    <ohc.version>5.2.1</ohc.version>
    <bnd.version>7.1.0</bnd.version>
    <gson.version>2.11.0</gson.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openhab.core.bom</groupId>
      <artifactId>org.openhab.core.bom.compile</artifactId>
      <version>${ohc.version}</version>
      <type>pom</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.openhab.core.bom</groupId>
      <artifactId>org.openhab.core.bom.openhab-core</artifactId>
      <version>${ohc.version}</version>
      <type>pom</type>
      <scope>provided</scope>
    </dependency>

    <!-- Used un-bundled: gson is provided by the openHAB runtime -->
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.openhab.core.bom</groupId>
      <artifactId>org.openhab.core.bom.test</artifactId>
      <version>${ohc.version}</version>
      <type>pom</type>
      <scope>test</scope>
    </dependency>

    <!-- test libs; plain Maven needs concrete artifacts beyond the OSGi-style bom -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>never</updatePolicy>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>openhab-release</id>
      <name>openHAB Release Repository</name>
      <url>https://openhab.jfrog.io/artifactory/libs-release</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <groupId>biz.aQute.bnd</groupId>
        <artifactId>bnd-maven-plugin</artifactId>
        <version>${bnd.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>bnd-process</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
